--- a/contracts/foundry.toml
+++ b/contracts/foundry.toml
@@ -2,5 +2,17 @@
 src = "src"
 out = "out"
 libs = ["lib"]
+remappings = ["@openzeppelin/=lib/openzeppelin-contracts/"]
+solc = "0.8.19"
 
-# See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
+[rpc_endpoints]
+base_sepolia = "https://sepolia.base.org"
+sepolia = "https://ethereum-sepolia-rpc.publicnode.com"
+arbitrum_sepolia = "https://sepolia-rollup.arbitrum.io/rpc"
+polygon_mumbai = "https://rpc-mumbai.polygon.technology"
+
+[etherscan]
+base_sepolia = { key = "${ETHERSCAN_API_KEY}", url = "https://api-sepolia.basescan.org/api" }
+sepolia = { key = "${ETHERSCAN_API_KEY}", url = "https://api-sepolia.etherscan.io/api" }
+arbitrum_sepolia = { key = "${ETHERSCAN_API_KEY}", url = "https://api-sepolia.arbiscan.io/api" }
+polygon_mumbai = { key = "${ETHERSCAN_API_KEY}", url = "https://api-testnet.polygonscan.com/api" }
